# TunMode

./: .gitignore  README.md  rfc793.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/git/gxosty/gxostapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cxx
app/src/main/cpp/include/RawSocket/: CheckSum.h
app/src/main/cpp/include/misc/: logger.hpp  obfuscate.h
app/src/main/cpp/include/tunmode/: definitions.hpp  tunmode.hpp
app/src/main/cpp/include/tunmode/common/: buffer.hpp  inbuffer.hpp  utils.hpp
app/src/main/cpp/include/tunmode/manager/: sessionmanager.hpp  tcpmanager.hpp  udpmanager.hpp
app/src/main/cpp/include/tunmode/session/: session.hpp  tcpsession.hpp
app/src/main/cpp/include/tunmode/socket/: sessionsocket.hpp  tcpsocket.hpp  tunsocket.hpp
app/src/main/cpp/src/RawSocket/: CheckSum.cpp
app/src/main/cpp/src/tunmode/: definitions.hpp  tunmode.cxx  tunmode.hpp
app/src/main/cpp/src/tunmode/common/: buffer.cxx  buffer.hpp  inbuffer.cxx  packet.cxx  packet.hpp  utils.cxx  utils.hpp
app/src/main/cpp/src/tunmode/manager/: sessionmanager.cxx  tcpmanager.cxx  udpmanager.cxx  udpmanager.hpp
app/src/main/cpp/src/tunmode/session/: session.cxx  tcpsession.cxx  udpsession.cxx  udpsession.hpp
app/src/main/cpp/src/tunmode/socket/: sessionsocket.cxx  socket.cxx  socket.hpp  tcpsocket.cxx  tunsocket.cxx  udpsocket.cxx  udpsocket.hpp
app/src/main/java/git/gxosty/tunmode/: TunModeApp.java
app/src/main/java/git/gxosty/tunmode/interceptor/activities/: MainActivity.java
app/src/main/java/git/gxosty/tunmode/interceptor/services/: TunModeService.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/git/gxosty/gxostapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
